# hoolamike

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rust-toolchain.toml  rustc-ice-2025-11-11T21_03_09-231721.txt
.cargo/: config.toml
.helix/: languages.toml
crates/bsa-cli/src/: main.rs
crates/case-insensitive-path/: Cargo.toml
crates/case-insensitive-path/src/: lib.rs  utils.rs
crates/hoola-audio/src/: lib.rs
crates/hoola-audio/src/resampler/: multichannel_chunk_reader.rs
crates/hoola-progress/: Cargo.toml
crates/hoola-progress/src/: hooks.rs  lib.rs  stream_compat.rs
crates/hoolamike/: .gitignore  Cargo.toml
crates/hoolamike/src/: archive_cli.rs  audio_cli.rs  compression.rs  config_file.rs  download_wabbajack_cdn.rs  downloaders.rs  extensions.rs  gui.rs  install_modlist.rs  main.rs  modlist_data.rs  modlist_json.rs  nxm_handler.rs  octadiff_reader.rs  post_install_fixup.rs  utils.rs  wabbajack_file.rs
crates/hoolamike/src/compression/: bethesda_archive.rs  case_insensitive_lookup.rs  compress_tools.rs  preheated_archive.rs  sevenz.rs  unrar_rs.rs  wrapped_7zip.rs  zip.rs
crates/hoolamike/src/compression/bethesda_archive/: integration_tests.rs
crates/hoolamike/src/compression/example-files/: data.7z  weird-1.7z
crates/hoolamike/src/downloaders/: gamefile_source_downloader.rs  google_drive.rs  helpers.rs  nexus.rs
crates/hoolamike/src/extensions/: fallout_new_vegas_4gb_patch.rs  tale_of_two_wastelands_installer.rs
crates/hoolamike/src/extensions/tale_of_two_wastelands_installer/: build_bsa.rs  file_attrs.rs  handle_asset.rs  post_commands.rs
crates/hoolamike/src/extensions/tale_of_two_wastelands_installer/manifest_file/: asset.rs  kind_guard.rs
crates/hoolamike/src/gui/: embedded_terminal.rs  view.rs
crates/hoolamike/src/install_modlist/: directives.rs  download_cache.rs  downloads.rs
crates/hoolamike/src/install_modlist/directives/: create_bsa.rs  from_archive.rs  inline_file.rs  nested_archive_directives.rs  nested_archive_manager.rs  patched_from_archive.rs  preheat_archive_hash_paths.rs  queued_archive_task.rs  remapped_inline_file.rs  transformed_texture.rs  wabbajack_file_handle.rs
crates/hoolamike/src/install_modlist/directives/create_bsa/: fallout_4.rs  tes_4.rs
crates/hoolamike/src/install_modlist/directives/transformed_texture/: dds_recompression.rs  dds_recompression_directx_tex.rs  dds_recompression_intel_tex.rs  dds_recompression_texconv_proton.rs  dds_recompression_texconv_wine.rs
crates/hoolamike/src/install_modlist/directives/transformed_texture/dds_recompression_directx_tex/: dxgi_format_mapping.rs
crates/hoolamike/src/install_modlist/directives/transformed_texture/dds_recompression_texconv_wine/: dxgi_format_mapping.rs
crates/hoolamike/src/modlist_json/: directive.rs  image_format.rs
crates/hoolamike/src/modlist_json/directive/: archive_hash_path.rs  create_bsa_directive.rs
crates/hoolamike/src/modlist_json/directive/create_bsa_directive/: ba2.rs  bsa.rs
crates/hoolamike/src/nxm_handler/: cli.rs  register.rs  utils.rs
crates/hoolamike/src/octadiff_reader/: tests.rs
crates/hoolamike/src/post_install_fixup/: diffing.rs
crates/hoolamike/src/progress_bars_v2/: hooks.rs
crates/proton-wrapper/: Cargo.toml  build-proton-wrapper-shell.sh
crates/proton-wrapper-shell/: Cargo.toml
crates/proton-wrapper-shell/src/: main.rs
crates/proton-wrapper/src/: ipc.rs  lib.rs  proton_context.rs
crates/texconv-wrapper/: Cargo.toml
crates/texconv-wrapper/src/: lib.rs
crates/tokio-cached-future/src/: lib.rs
crates/wine-wrapper/: Cargo.toml  build-proton-wrapper-shell.sh
crates/wine-wrapper-shell/: Cargo.toml
crates/wine-wrapper-shell/src/: main.rs
crates/wine-wrapper/src/: ipc.rs  lib.rs  wine_context.rs
crates/wrapped-7zip/src/: lib.rs
docs/: editing_configuration_file.md  example.yaml  install_from_mpi.md  install_wabbajack_modlist.md
