[package]
name = "hoola-progress"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
tokio = { workspace = true, optional = true }
extension-traits.workspace = true
futures-channel = "0.3.31"
parking_lot.workspace = true
tap.workspace = true
tracing.workspace = true
