[package]
name = "proton-wrapper-shell"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "cargo", "env"] }
gag = "1.0.0"
proton-wrapper.workspace = true
tap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
