[package]
name = "proton-wrapper"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
extension-traits.workspace = true
itertools.workspace = true
nix = { version = "0.30.1", features = ["fs"] }
tap.workspace = true
tempfile.workspace = true
tracing.workspace = true
typed-path.workspace = true

[dev-dependencies]
test-log.workspace = true
