[package]
name = "proton-wrapper"
version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
bytemuck = "1.23.2"
extension-traits.workspace = true
itertools.workspace = true
nix = { version = "0.30.1", features = ["fs"] }
serde.workspace = true
serde_json.workspace = true
tap.workspace = true
tempfile.workspace = true
tracing.workspace = true
typed-path.workspace = true
ulid = "1.2.1"

[dev-dependencies]
test-log.workspace = true
